Fill tool bug #41715

Closed
opened 2014-09-04 19:16:37 +02:00 by Alexey · 5 comments

System Information
System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (2.71.6(c670ceb))
Worked: (all official)

Short description of error
0.png
1.png
2.png
3.png
4.png

Exact steps for others to reproduce the error
fill_bug.blend
1)open this(only with 2.71.6)
2)select erase alpha and paint anything
3)select fill tool, switch off alpha and click LMB in area - we will see filled all area with alpha painted area

**System Information** System Information windows7 64 ASUS ATI Radeon HD6870 **Blender Version** Broken: (2.71.6(c670ceb)) Worked: (all official) **Short description of error** ![0.png](https://archive.blender.org/developer/F108797/0.png) ![1.png](https://archive.blender.org/developer/F108799/1.png) ![2.png](https://archive.blender.org/developer/F108801/2.png) ![3.png](https://archive.blender.org/developer/F108803/3.png) ![4.png](https://archive.blender.org/developer/F108805/4.png) **Exact steps for others to reproduce the error** [fill_bug.blend](https://archive.blender.org/developer/F108807/fill_bug.blend) 1)open this(only with 2.71.6) 2)select erase alpha and paint anything 3)select fill tool, switch off alpha and click LMB in area - we will see filled all area with alpha painted area
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-04 19:16:37 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-09-04 19:22:37 +02:00
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-09-04 19:22:37 +02:00

This issue was referenced by 84a7a578e2

This issue was referenced by 84a7a578e2f14bf001582117faf7e099530d402a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 84a7a578e2.

Closed by commit 84a7a578e2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41715
No description provided.