Fix T41715 fill tools not respecting alpha lock